Refactor DeviceDetailActivity layout and improve UI responsiveness

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         </activity>
 
         <activity android:name=".activities.TestCaseSelectionActivity" />
+        <activity android:name=".activities.DeviceDetailActivity" />
     </application>
 
 </manifest>
